--- a/Environment_oM/Environment_oM.csproj
+++ b/Environment_oM/Environment_oM.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>_Properties</AppDesignerFolder>
     <RootNamespace>BH.oM.Environment</RootNamespace>
     <AssemblyName>Environment_oM</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
