--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,41 @@
-# Build and test ASP.NET projects.
-# Add steps that publish symbols, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
+# ASP.NET Core (.NET Framework)
+# Build and test ASP.NET Core projects targeting the full .NET Framework.
+# Add steps that publish symbols, save build artifacts, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- master
+  branches:
+    include:
+    - '*'
 
-pool:
-  vmImage: 'ubuntu-16.04'
-
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
-
-steps:
-- task: NuGetToolInstaller@0
-
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'test'
+jobs:
+- job: Linux
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - task: DotNetCoreInstaller@0
+    inputs:
+      version: '2.1.300'
+  - script: dotnet restore
+  - script: dotnet build
+  - script: dotnet test
+- job: macOS
+  pool:
+    vmImage: 'macOS-10.14'
+  steps:
+  - task: DotNetCoreInstaller@0
+    inputs:
+      version: '2.1.300'
+  - script: dotnet restore
+  - script: dotnet build
+  - script: dotnet test
+- job: Windows
+  pool:
+    vmImage: 'windows-2019'
+  steps:
+  - task: DotNetCoreInstaller@0
+    inputs:
+      version: '2.1.300'
+  - script: dotnet restore
+  - script: dotnet build
+  - script: dotnet test
