--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,7 @@ jobs:
   - task: DotNetCoreInstaller@0
     inputs:
       version: '2.1.300'
-  - script: dotnet restore
-  - script: dotnet build
+  - script: dotnet build -f netcoreapp2.1
   - script: dotnet test
 - job: macOS
   pool:
@@ -26,16 +25,11 @@ jobs:
   - task: DotNetCoreInstaller@0
     inputs:
       version: '2.1.300'
-  - script: dotnet restore
-  - script: dotnet build
+  - script: dotnet build -f netcoreapp2.1
   - script: dotnet test
 - job: Windows
   pool:
     vmImage: 'windows-2019'
   steps:
-  - task: DotNetCoreInstaller@0
-    inputs:
-      version: '2.1.300'
-  - script: dotnet restore
   - script: dotnet build
   - script: dotnet test
